[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantaseal"
version = "0.1.0"
description = "Python SDK for QuantaSeal - Universal Quantum-Safe Security Middleware"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "QuantaSeal", email = "sdk@quantaseal.io" },
]
keywords = [
    "quantum-safe",
    "post-quantum",
    "cryptography",
    "encryption",
    "ML-KEM",
    "ML-DSA",
    "vault",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
async = [
    "httpx[http2]>=0.27.0,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "coverage[toml]>=7.0",
]

[project.urls]
Homepage = "https://quantaseal.io"
Documentation = "https://api.quantaseal.io/api/docs"
Repository = "https://github.com/quantaseal/quantaseal-python"
Issues = "https://github.com/quantaseal/quantaseal-python/issues"
Changelog = "https://github.com/quantaseal/quantaseal-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quantaseal"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["quantaseal"]

[tool.coverage.report]
show_missing = true
fail_under = 90
